# reckless-model

./: .gitattributes  .gitignore  README.md  nHDnu8Q.txt  pyproject.toml
analysis/: cmc_top_gainers_study.py  delayed_reversal_analysis.py  research_analysis.ipynb  research_analysis.py
docs/plans/: 2026-03-08-binance-perp-top-gainers-design.md  2026-03-08-binance-perp-top-gainers-event-study.md  2026-03-09-4h-data-coverage-gap-closure.md  2026-03-09-breakout-blowoff-4h-design.md  2026-03-09-breakout-blowoff-4h.md
docs/reports/: 2026-03-08-binance-top-gainers-report.md
outputs/: bucket_paths.csv  events.csv  feature_comparison.csv  filter_oos_results.csv  forward_returns_by_day.csv  secondary_filter_walk_forward_results.csv  secondary_filter_walk_forward_summary.csv  signal_candidates.csv  signal_table.csv  summary.json  tertiary_filter_walk_forward_results.csv  tertiary_filter_walk_forward_summary.csv  walk_forward_results.csv  walk_forward_summary.csv  walk_forward_top_filters.csv
outputs_4h/: asset_map.parquet  event_features_4h.parquet  top_gainer_events.parquet
scripts/: build_event_features_4h.py  build_event_labels.py  build_market_bars_4h.py  build_top_gainer_events_4h.py  fetch_historical_4h.py
tests/: test_artifacts.py  test_asset_map.py  test_binance_client.py  test_cli.py  test_events.py  test_events_4h.py  test_features_4h.py  test_filter_analysis.py  test_forward_returns.py  test_historical_clients.py  test_labels.py  test_paths.py  test_reporting.py  test_signals.py  test_stage_scripts.py  test_universe.py  test_walk_forward.py
(+36 files in other folders)
