[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reckless-binance"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
